# kaz_judge

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/accounts/: models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend/src/accounts/migrations/: 0001_initial.py
backend/src/commons/: utils.py
backend/src/config/: celery.py  settings.py  urls.py
backend/src/problems/: models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/src/problems/migrations/: 0001_initial.py
backend/src/solutions/: serializers.py  services.py  urls.py  views.py
backend/src/submissions/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/src/tests/: models.py  selectors.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/src/tests/migrations/: 0001_initial.py
